package ec.ed.espe.MolePrjManagement.model;

/**
 *
 * @author Brandon Pazmino
 */
public class Date {
    
}
