package ec.edu.espe.farmsimulator.utils;

/**
 *
 * @author Esteban Quiroga
 */
public class FileManager {
    
    public static void save(String data, String fileName, String format){
    
    }
    
            
}
