

package getemployeesage;

import java.io.FileReader;
import java.io.FileWriter;
import java.util.List;

/**
 *
 * @author Benjamin Robalino <jabasteam>
 */
class Gson {

    void toJson(List<Employee> employees, FileWriter writer) {
        throw new UnsupportedOperationException("Not supported yet."); // Generated from nbfs://nbhost/SystemFileSystem/Templates/Classes/Code/GeneratedMethodBody
    }

    Employee[] fromJson(FileReader reader, Class<Employee[]> aClass) {
        throw new UnsupportedOperationException("Not supported yet."); // Generated from nbfs://nbhost/SystemFileSystem/Templates/Classes/Code/GeneratedMethodBody
    }

}
